fix home on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1185,7 +1185,7 @@ section.content .gatsby-highlight + h4::before{
 
 .sidebar nav li{
   margin-top: 5px;
-  max-width: 92%;
+  max-width: 90%;
 }
 
 .css-ts0qly{
